manifest/objects/CPQU__Related_List__c.object
<CustomObject>
    <fields>
        <fullName>CPQU__Advanced_Filter__c</fullName>
        <label>Advanced Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQU__Filters_Met__c</fullName>
        <label>Filters Met</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Pagination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQU__Rows_per_Page_Custom__c</fullName>
        <label>Rows per Page - Custom</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQU__Rows_per_Page__c</fullName>
        <description>The number of rows per page when pagination field is set to true.  If this field is blank, the related list will show 5 records per page as a default.</description>
        <inlineHelpText>The number of rows per page when pagination field is set to true.  If this field is blank, the related list will show 5 records per page as a default.</inlineHelpText>
        <label>Rows per Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Target_Object__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__QuoteLine__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Related List</label>
    <listViews>
        <fullName>CPQU__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPQU__Advanced_Filter_Required</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CPQU__Filters_Met__c) == &quot;Custom&quot; &amp;&amp; ISBLANK(CPQU__Advanced_Filter__c)</errorConditionFormula>
        <errorMessage>Advanced Filter value is required when Filters Met is &quot;Custom&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPQU__Rows_per_Page_Custom_required</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CPQU__Rows_per_Page__c) == &quot;Custom&quot; &amp;&amp; ISBLANK(CPQU__Rows_per_Page_Custom__c)</errorConditionFormula>
        <errorMessage>Rows per Page - Custom field is required if Rows per Page field is &quot;Custom&quot;.</errorMessage>
    </validationRules>
</CustomObject>